--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,18 @@
 
   <main class="page-content" aria-label="Content">
     <div class="wrapper">
-      {{ content }}
+      {%- if page.title and page.layout != "home" -%}
+        <article class="post">
+          <header class="post-header">
+            <h1 class="post-title">{{ page.title | escape }}</h1>
+          </header>
+          <div class="post-content">
+            {{ content }}
+          </div>
+        </article>
+      {%- else -%}
+        {{ content }}
+      {%- endif -%}
     </div>
   </main>
 
