--- a/gui/ui/MainWindow.ui
+++ b/gui/ui/MainWindow.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>cudaSAXS GUI</string>
+   <string>CuSAXS GUI</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout">
