Removed all your-username

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,7 +21,7 @@
           <a class="page-link" href="{{ "/about/" | relative_url }}">About</a>
           <a class="page-link" href="{{ "/tutorials/" | relative_url }}">Tutorials</a>
           <a class="page-link" href="{{ "/api/" | relative_url }}">API Reference</a>
-          <a class="page-link" href="https://github.com/your-username/CuSAXS" target="_blank">GitHub</a>
+          <a class="page-link" href="https://github.com/octupole/CuSAXS" target="_blank">GitHub</a>
         </div>
       </nav>
     {%- endif -%}
