--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -4,6 +4,6 @@
     <a class="page-link" href="{{ '/about/' | relative_url }}">About</a>
     <a class="page-link" href="{{ '/tutorials/' | relative_url }}">Tutorials</a>
     <a class="page-link" href="{{ '/api/' | relative_url }}">API Reference</a>
-    <a class="page-link" href="https://github.com/your-username/CuSAXS">GitHub</a>
+    <a class="page-link" href="https://github.com/octupole/CuSAXS">GitHub</a>
   </div>
 </nav>
